--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "lint": "eslint \"./src/**/*.{ts,tsx}\" --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
