--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "eslint": "^7.31.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.24.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -38,15 +45,8 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "lint": "eslint \"./src/**/*.{ts,tsx}\" --fix",
     "start": "react-scripts start",
-    "test": "react-scripts test",
-    "lint": "eslint \"./src/**/*.{ts,tsx}\" --fix"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.24.0"
+    "test": "react-scripts test"
   }
 }
