--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "the-new-css-reset": "^1.1.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
