--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^7.31.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.24.0",
+    "gh-pages": "^3.2.3",
     "sass": "^1.35.2"
   },
   "eslintConfig": {
@@ -49,6 +50,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint \"./src/**/*.{ts,tsx}\" --fix",
     "start": "react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "deploy": "yarn build && gh-pages -d build"
   }
 }
